--- a/SASS/style.css
+++ b/SASS/style.css
@@ -17,9 +17,122 @@
   background-color: white;
 }
 
+.myway {
+  gap: 10vw;
+}
+
+@media screen and (min-width: 768px) {
+  .myway {
+    gap: 57.5vw;
+  }
+}
+
+.myways {
+  gap: 27vw;
+}
+
+@media screen and (min-width: 768px) {
+  .myways {
+    gap: 57.5vw;
+  }
+}
+
+.mywayss {
+  gap: 30vw;
+}
+
+.lastway {
+  gap: 8vw;
+}
+
+.weneed {
+  gap: 36vw;
+}
+
+@media screen and (min-width: 577px) {
+  .weneed {
+    gap: 41.5vw;
+  }
+}
+
+.mains {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (min-width: 992px) {
+  .newpoint {
+    height: 8vh;
+  }
+}
+
 .head {
   -webkit-box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.16);
+}
+
+.head .navlinks {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (max-width: 992px) {
+  .head .navlinks {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.head .navlinks li {
+  list-style-type: none;
+}
+
+.head .navlinks .services .sub-menu {
+  display: none;
+}
+
+.head .navlinks .services:hover {
+  display: block;
+}
+
+.head .navlinks .services:hover .sub-menu {
+  display: block;
+}
+
+.head .navlinks .services:hover .sub-menu:hover {
+  display: block;
+}
+
+.head .navlinks .services:hover .sub-menu ul {
+  display: block;
+  position: absolute;
+  color: #028c32;
+  font-size: 16px;
+  line-height: 4;
+  margin-top: 0px;
+  background-color: #eeeeee;
+  border-radius: 6px;
 }
 
 .head .wrap {
@@ -243,8 +356,8 @@
   .section2 {
     height: 25vh;
   }
-  .section2 .sponsor {
-    width: 10vw;
+  .section2 .newpoint {
+    height: 4vh;
   }
   .section2 h3 {
     font-size: 18px;
@@ -346,9 +459,9 @@
   font-family: "Mulish", sans-serif;
   color: #028c32;
   margin-bottom: 30px;
-  width: 430px;
+  width: 385px;
   font-weight: 700;
-  font-size: 22px;
+  font-size: 20px;
 }
 
 .section4 p {
@@ -357,7 +470,7 @@
   font-size: 16px;
   font-weight: 400;
   margin-bottom: 40px;
-  width: 450px;
+  width: 350px;
   line-height: 1.5;
 }
 
@@ -450,6 +563,16 @@
   font-size: 40px;
 }
 
+.section5 .preType {
+  background: -webkit-gradient(linear, right top, left top, color-stop(5.66%, #ffffff), color-stop(98.72%, rgba(255, 255, 255, 0)));
+  background: linear-gradient(270deg, #ffffff 5.66%, rgba(255, 255, 255, 0) 98.72%);
+  border-radius: 15px;
+  margin-bottom: 4vh;
+  margin-top: 4vh;
+  -webkit-box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.16);
+}
+
 .section5 h6 {
   color: #028c32;
   font-family: "Mulish", sans-serif;
@@ -458,7 +581,6 @@
 }
 
 .section5 p {
-  width: 900px;
   font-family: "Mulish", sans-serif;
   font-size: 20px;
   text-align: justify;
@@ -638,6 +760,9 @@
     margin-top: 20px;
     font-weight: 400;
     font-size: 22px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .section7 .asking {
     font-size: 25px;
@@ -660,11 +785,35 @@
     margin-bottom: 20px;
     font-size: 12px;
   }
+  .section7 .accordion-button {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    padding: 1rem 1.25rem;
+    font-size: 1rem;
+    color: #212529;
+    text-align: left;
+    background-color: #fff;
+    border: 0;
+    border-radius: 0;
+    overflow-anchor: none;
+    -webkit-transition: color 0.15s;
+    transition: color 0.15s;
+  }
 }
 
 footer {
   background-color: #028c32;
   min-height: 600px;
+}
+
+footer .Mobilefooter {
+  display: none;
 }
 
 footer .footmenu {
@@ -697,7 +846,7 @@ footer input {
   font-family: "Mulish", sans-serif;
   color: rgba(0, 0, 0, 0.4);
   height: 30px;
-  width: 400px;
+  width: 320px;
   border-radius: 6px;
   border: none;
 }
@@ -721,23 +870,97 @@ footer p {
   font-size: 16px;
 }
 
-footer h6 {
+footer h5 {
   color: white;
   font-family: "Mulish", sans-serif;
 }
 
 footer button {
+  position: absolute;
   color: white;
   font-size: 12px;
   padding: 5px;
   border-radius: 6px;
   width: 100px;
   background-color: black;
-  position: absolute;
-  right: 175px;
+  right: 14vw;
+}
+
+footer .lastP {
+  margin-top: -67px;
 }
 
 footer .medias {
-  padding-left: 320px;
+  margin-top: -67px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+@media screen and (max-width: 992px) {
+  footer .desktopFoot {
+    display: none;
+  }
+  footer .Mobilefooter {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  footer .Mobilefooter .row {
+    margin-top: -10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  footer p {
+    text-align: justify;
+    font-size: 12px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  footer .lists {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  footer input {
+    font-family: "Mulish", sans-serif;
+    color: rgba(0, 0, 0, 0.4);
+    height: 30px;
+    width: 263px;
+    border-radius: 6px;
+    border: none;
+    margin-bottom: 20px;
+  }
+  footer button {
+    position: absolute;
+    color: white;
+    font-size: 12px;
+    padding: 5px;
+    border-radius: 6px;
+    width: 70px;
+    background-color: black;
+    right: 14vw;
+  }
+  footer .d-flex {
+    gap: 3vw;
+    padding-bottom: 20px;
+  }
+  footer .lastPP {
+    font-size: 12px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
