--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -3,6 +3,45 @@
 
 .head {
     box-shadow: $shadow;
+    .navlinks {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        @media screen and (max-width: 992px) {
+            flex-direction: column;
+            display: flex;
+        }
+
+        li {
+            list-style-type: none;
+        }
+        .services {
+            .sub-menu {
+                display: none;
+            }
+        }
+        .services:hover {
+            display: block;
+            .sub-menu {
+                display: block;
+                &:hover {
+                    display: block;
+                }
+                ul {
+                    display: block;
+                    position: absolute;
+                    color: $primarycolor;
+                    font-size: 16px;
+                    line-height: 4;
+                    margin-top: 0px;
+                    background-color: $color1;
+                    border-radius: 6px;
+                }
+            }
+        }
+    }
+
     .wrap {
         padding: 1em;
         width: 100%;
@@ -184,8 +223,8 @@
 
     @media screen and (max-width: 992px) {
         height: 25vh;
-        .sponsor {
-            width: 10vw;
+        .newpoint {
+            height: 4vh;
         }
         h3 {
             font-size: 18px;
@@ -277,9 +316,9 @@
         font-family: $font1;
         color: $primarycolor;
         margin-bottom: 30px;
-        width: 430px;
+        width: 385px;
         font-weight: 700;
-        font-size: 22px;
+        font-size: 20px;
     }
     p {
         font-family: $font1;
@@ -287,7 +326,7 @@
         font-size: 16px;
         font-weight: 400;
         margin-bottom: 40px;
-        width: 450px;
+        width: 350px;
         line-height: 1.5;
     }
     .btn1 {
@@ -374,6 +413,13 @@
         font-family: $font1;
         font-size: 40px;
     }
+    .preType {
+        background: linear-gradient(270deg, #ffffff 5.66%, rgba(255, 255, 255, 0) 98.72%);
+        border-radius: 15px;
+        margin-bottom: 4vh;
+        margin-top: 4vh;
+        box-shadow: $shadow;
+    }
 
     h6 {
         color: $primarycolor;
@@ -383,7 +429,7 @@
     }
 
     p {
-        width: 900px;
+        // width: 900px;
         font-family: $font1;
         font-size: 20px;
         text-align: justify;
@@ -528,6 +574,7 @@
         align-self: center;
         margin-bottom: 40px;
     }
+
     @media screen and(max-width:992px) {
         h3 {
             display: none;
@@ -539,6 +586,7 @@
             margin-top: 20px;
             font-weight: 400;
             font-size: 22px;
+            justify-content: center;
         }
         .asking {
             font-size: 25px;
@@ -559,13 +607,32 @@
             margin-bottom: 20px;
             font-size: 12px;
         }
+
+        .accordion-button {
+            position: relative;
+            display: flex;
+            align-items: center;
+            width: 100%;
+            padding: 1rem 1.25rem;
+            font-size: 1rem;
+            color: #212529;
+            text-align: left;
+            background-color: #fff;
+            border: 0;
+            border-radius: 0;
+            overflow-anchor: none;
+            transition: color 0.15s;
+        }
     }
 }
 
 footer {
     background-color: $primarycolor;
     min-height: 600px;
-    .footmenu{
+    .Mobilefooter {
+        display: none;
+    }
+    .footmenu {
         padding-left: 60px;
     }
     .footItems {
@@ -590,7 +657,7 @@ footer {
         font-family: $font1;
         color: $color3;
         height: 30px;
-        width: 400px;
+        width: 320px;
         border-radius: 6px;
         border: none;
     }
@@ -609,22 +676,77 @@ footer {
         font-family: $font1;
         font-size: 16px;
     }
-    h6 {
+    h5 {
         color: $color2;
         font-family: $font1;
     }
     button {
+        position: absolute;
         color: $color2;
         font-size: 12px;
         padding: 5px;
         border-radius: 6px;
         width: 100px;
         background-color: $secondarycolor;
-        position: absolute;
-        right: 175px;
-        // top: 0px;
+        right: 14vw;
+        // top: 120px;
     }
-    .medias{
-        padding-left: 320px;
+    .lastP {
+        margin-top: -67px;
+    }
+    .medias {
+        margin-top: -67px;
+        display: flex;
+        justify-content: flex-end;
+    }
+    @media screen and (max-width: 992px) {
+        .desktopFoot {
+            display: none;
+        }
+        .Mobilefooter {
+            display: flex;
+            .row {
+                margin-top: -10px;
+                display: flex;
+                align-items: center;
+            }
+        }
+        p {
+            text-align: justify;
+            font-size: 12px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+        .lists {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        input {
+            font-family: "Mulish", sans-serif;
+            color: rgba(0, 0, 0, 0.4);
+            height: 30px;
+            width: 263px;
+            border-radius: 6px;
+            border: none;
+            margin-bottom: 20px;
+        }
+        button {
+            position: absolute;
+            color: white;
+            font-size: 12px;
+            padding: 5px;
+            border-radius: 6px;
+            width: 70px;
+            background-color: black;
+            right: 14vw;
+        }
+        .d-flex{
+            gap: 3vw;
+            padding-bottom: 20px;
+        }
+        .lastPP{
+            font-size: 12px;
+        }
     }
 }
