--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -107,6 +107,49 @@
 .section1 {
     overflow: hidden;
     border-bottom: 40px solid $primarycolor;
+    .btnn {
+        background-color: $primarycolor;
+        color: $color1;
+        width: 200px;
+        height: 55px;
+        border-radius: 6px;
+        border: 1px solid $primarycolor;
+        box-shadow: 0px 4px 4px $primarycolor;
+        margin-right: 3vw;
+        @media screen and (max-width: 992px) {
+            background-color: $primarycolor;
+            color: $color1;
+            width: 150px;
+            height: 40px;
+            font-size: 12px;
+            border-radius: 6px;
+            border: 1px solid $primarycolor;
+            box-shadow: 0px 4px 4px $primarycolor;
+            margin-right: 3vw;
+            margin-left: 3vw;
+            margin-bottom: 3vw;
+            align-items: center;
+        }
+    }
+
+    .collectorw {
+        color: $primarycolor;
+        font-family: $font2;
+        font-weight: 700;
+        font-size: 60px;
+        width: 400px;
+        padding-bottom: 20px;
+        @media screen and (max-width: 992px) {
+            color: $primarycolor;
+            font-family: $font2;
+            font-weight: 700;
+            font-size: 36px;
+            width: 300px;
+            padding-top: 30px;
+            padding-bottom: 20px;
+            text-align: center;
+        }
+    }
     h1 {
         color: $primarycolor;
         font-family: $font2;
@@ -360,12 +403,12 @@
         }
         h6 {
             font-size: 14px;
-            width: 250px;
+            width: 233px;
             text-align: justify;
         }
         p {
             font-size: 12px;
-            width: 250px;
+            width: 230px;
             text-align: justify;
         }
         .line {
@@ -375,7 +418,7 @@
             background-color: $color1;
             border-radius: 6px;
             padding: 30px 30px;
-            margin-top: -195px;
+            margin-top: -200px !important;
             margin-bottom: 50px;
         }
 
@@ -459,8 +502,20 @@
         p {
             margin-bottom: 30px;
             font-size: 12px;
-            width: 300px;
+            width: 255px;
             text-align: justify;
+        }
+        .preType {
+            background: linear-gradient(270deg, #ffffff 5.66%, rgba(255, 255, 255, 0) 98.72%);
+            border-radius: 15px;
+            margin-bottom: 4vh;
+            margin-top: -5vh !important;
+            box-shadow: $shadow;
+            width: 350px;
+            padding: 20px;
+        }
+        .prtypecont{
+            margin-top: 10px !important;
         }
     }
 }
@@ -522,9 +577,9 @@
         }
         .cont {
             margin-bottom: 20px;
+            width: 300px;
             img {
                 // // padding: 10px;
-                // width: 90px;
                 justify-content: center;
             }
         }
@@ -563,6 +618,24 @@
         margin-top: -30px;
     }
 
+    .accordion-button {
+        color: $primarycolor;
+        font-size: 20px;
+        font-family: $font1;
+        background: rgba(154, 153, 153, 0.08);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 6px;
+    }
+    .accordion-body {
+        color: $color3;
+        font-size: 18px;
+        font-family: $font1;
+        line-height: 140%;
+        background: rgba(154, 153, 153, 0.08);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 6px;
+    }
+
     .btn1 {
         margin-top: 30px;
         background-color: $primarycolor;
@@ -577,7 +650,7 @@
 
     @media screen and(max-width:992px) {
         h3 {
-            display: none;
+            display: none !important;
         }
         h4 {
             display: flex;
@@ -589,6 +662,7 @@
             justify-content: center;
         }
         .asking {
+            display: flex !important;
             font-size: 25px;
         }
         p {
@@ -607,30 +681,30 @@
             margin-bottom: 20px;
             font-size: 12px;
         }
-
-        .accordion-button {
-            position: relative;
-            display: flex;
-            align-items: center;
-            width: 100%;
-            padding: 1rem 1.25rem;
-            font-size: 1rem;
-            color: #212529;
-            text-align: left;
-            background-color: #fff;
-            border: 0;
-            border-radius: 0;
-            overflow-anchor: none;
-            transition: color 0.15s;
-        }
     }
 }
 
 footer {
     background-color: $primarycolor;
     min-height: 600px;
+    .desktopFoot{
+        form{
+            position: relative;
+            span{
+                position: absolute;
+                transform: translateX(-100px);
+            }
+        }
+    }
     .Mobilefooter {
         display: none;
+        form{
+            position: relative;
+            span{
+                position: absolute;
+                transform: translateX(-69px);
+            }
+        }
     }
     .footmenu {
         padding-left: 60px;
@@ -643,9 +717,9 @@ footer {
     .logo {
         margin-top: 50px;
     }
-    .formF {
-        padding-left: 135px;
-        margin-top: 50px;
+    .formFF{
+        padding-left: 115px;
+        margin-top: 4vh;
     }
     label {
         color: $color2;
@@ -653,7 +727,6 @@ footer {
         font-size: 12px;
     }
     input {
-        // font-size: 10px;
         font-family: $font1;
         color: $color3;
         height: 30px;
@@ -681,7 +754,6 @@ footer {
         font-family: $font1;
     }
     button {
-        position: absolute;
         color: $color2;
         font-size: 12px;
         padding: 5px;
@@ -689,7 +761,6 @@ footer {
         width: 100px;
         background-color: $secondarycolor;
         right: 14vw;
-        // top: 120px;
     }
     .lastP {
         margin-top: -67px;
@@ -731,22 +802,109 @@ footer {
             border: none;
             margin-bottom: 20px;
         }
+        
         button {
-            position: absolute;
+            
             color: white;
             font-size: 12px;
             padding: 5px;
             border-radius: 6px;
             width: 70px;
             background-color: black;
-            right: 14vw;
         }
-        .d-flex{
+        .d-flex {
             gap: 3vw;
             padding-bottom: 20px;
         }
-        .lastPP{
+        .lastPP {
             font-size: 12px;
+        }
+    }
+}
+
+.section22 {
+    h3 {
+        font-family: $font1;
+        font-weight: 700;
+        font-size: 40px;
+        text-align: center;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        color: $secondarycolor;
+    }
+    p {
+        color: $color3;
+        width: 300px;
+        text-align: center;
+    }
+    .img {
+        display: grid;
+        justify-items: center;
+    }
+}
+
+.section33 {
+    h1 {
+        font-family: $font1;
+        font-size: 40px;
+        font-weight: 600;
+        color: $primarycolor;
+        text-align: center;
+        margin-top: 50px;
+        margin-bottom: 40px;
+    }
+    .accordion-button {
+        color: $primarycolor;
+        font-size: 20px;
+        font-family: $font1;
+        background: rgba(154, 153, 153, 0.08);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 6px;
+    }
+    .accordion-body {
+        color: $color3;
+        font-size: 18px;
+        font-family: $font1;
+        line-height: 140%;
+        background: rgba(154, 153, 153, 0.08);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 6px;
+    }
+    h3 {
+        font-family: $font1;
+        font-size: 40px;
+        font-weight: 600;
+        color: $primarycolor;
+        text-align: center;
+        margin-top: 50px;
+    }
+    p {
+        color: $color3;
+        font-family: $font1;
+    }
+    .btn1 {
+        margin-top: 30px;
+        background-color: $primarycolor;
+        color: $color1;
+        width: 200px;
+        height: 55px;
+        border-radius: 6px;
+        border: 1px solid $primarycolor;
+        align-self: center;
+        margin-bottom: 40px;
+        @media screen and (max-width: 992px) {
+            .btn1 {
+                margin-top: 30px;
+                background-color: $primarycolor;
+                color: $color1;
+                width: 120px;
+                height: 40px;
+                border-radius: 6px;
+                border: 1px solid $primarycolor;
+                align-self: center;
+                margin-bottom: 20px;
+                font-size: 12px;
+            }
         }
     }
 }
