--- a/style.scss
+++ b/style.scss
@@ -161,6 +161,20 @@ footer {
                     font-size: 18px;
                     line-height: 155%;
                     color: $ptext2;
+                    @media screen and(min-width:768px){
+                        width: 90%;
+                    }
+                    @media screen and(min-width:992px){
+                        width: 80%;
+                    }
+                }
+                span{
+                    @media screen and (min-width:768px){
+                        justify-content: center;
+                    }
+                    @media screen and (min-width:992px){
+                        justify-content: center;
+                    }
                 }
                 input{
                     width: 50%;
