--- a/style.css
+++ b/style.css
@@ -367,26 +367,27 @@ footer .Copyright {
 }
 
 .container > div {
-  background-color: #EEEEEE;
+  background-color: #FFFFFF;
   margin: auto;
-  padding: 20px 10px 20px 10px;
+  padding: 20px 20px 20px 20px;
 }
 
 table {
   border-collapse: collapse;
   -webkit-box-shadow: 0px 11px 12px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 11px 12px rgba(0, 0, 0, 0.12);
-  border-radius: 10px 10px 0 0 !important;
+  border-radius: 0 0 10px 10px  !important;
 }
 
 table thead th {
   text-align: center;
   border-radius: 10px 10px 0 0;
-  background-color: #08BD46B2 !important;
+  background-color: #028C32 !important;
+  color: #FFFFFF;
 }
 
 table th {
-  background-color: #4CAF50;
+  background-color: #028C32;
 }
 
 table td {
@@ -394,8 +395,12 @@ table td {
   padding: 10px;
 }
 
+table tr:nth-child(odd) {
+  border-right: 2px solid green;
+}
+
 table tr:nth-child(even) {
-  background-color: #08BD46B2;
+  background-color: #028C32;
   color: #FFFFFF;
 }
 
